2010-01-26	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Installation_Guide.odt: Default web admin
	account is not admin / qwerty anymore, it is defined by user when
	running installer.pl. Corrected that mistake in the install guide.

2010-01-22	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/bin/pfcmd: Validate for successful write to conf/switches.conf 
	when adding, deleting and editing a switch. Fixes #898;
	http://www.packetfence.org/mantis/view.php?id=898
	Pushed in a little print to logdie conversion at another spot too.
	Hard-coded line numbers are to get the web admin to display the error.

	* pf/bin/pfcmd: New grammar tracing flag in pfcmd (disabled by
	default)

2010-01-21	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/dhcp_fingerprints.conf: Added a projectors class and an
	Epson projector fingerprint to the DHCP fingerprint database.
	Contributed by Roelof Hoekstra.
	
2010-01-19	Olivier Bilodeau <obilodeau@inverse.ca>
	* Adding pf/lib/pf/SNMP/Cisco/WiSM.pm, modified pf/README_SWITCHES, 
	pf/docs/PacketFence_Administration_Guide.odt,
	pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php, pf/t/SNMP.t,
	pf/t/critic.t, pf/t/pod.t: Added module for Cisco Wireless Services
	Module (WiSM) and all required references for new hardware support
	Internally module is referring to Cisco Controller 4200's
	implementation.

	* pf/conf/templates/httpd.conf.pre_apache22, 
	pf/conf/templates/httpd.conf.apache22: Blocking Microsoft NCSI user
	agent from reaching captive portal.
	Windows Vista and 7 use the NCSI in background to detect connectivity,
	there is no need to waste resources capturing these web requests.
	http://technet.microsoft.com/en-us/library/cc766017(WS.10).aspx.
	Fixes #892;
	http://www.packetfence.org/mantis/view.php?id=892

2010-01-15	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/lookup/person.pm: Improved custom example
